Attempt to fix spacing

--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,10 @@ main {
 .background-image {
   height: 100%;
   width: 100%;
-  background-position: stretch;
+  background-position: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin: 0px;
   grid-area: "stack";
   grid-row: 1;
   grid-column: 1;
@@ -41,8 +43,8 @@ main {
 
 .recipe-selection,
 .recipe-display {
-  height: 38%;
-  width: 38%;
+  height: 40%;
+  width: 40%;
   text-align: left;
   background-color: rgba(225, 225, 225, .9);
   grid-area: "stack";
@@ -71,7 +73,7 @@ main {
 .recipe-selection > h3 {
   font-size: 22px;
   margin-left: 8%;
-  margin-top: 14%;
+  margin-top: 13%;
 }
 
 .cookpot {
@@ -90,6 +92,6 @@ main {
 
 
 .meal-selection {
-  margin-top: 1.1%;
+  margin-top: 1%;
   margin-left: 10%;
 }
